force-app/main/default/objects/Payment_Milestone__c/Payment_Milestone__c.object-meta.xml
<CustomObject>
    <description>Master payment milestone template</description>
    <label>Payment Milestone</label>
    <nameField>
        <displayFormat>PM-{00000}</displayFormat>
        <label>Payment Milestone ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>