force-app/main/default/objects/Payment_Milestone__c/fields/Construction_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Construction_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Construction Milestone</label>
    <referenceTo>Construction_Milestone__c</referenceTo>
    <relationshipLabel>Payment Milestones</relationshipLabel>
    <relationshipName>Payment_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>