force-app/main/default/objects/Payment_Milestone__c/fields/Is_Construction_Linked__c.field-meta.xml
<CustomField>
    <fullName>Is_Construction_Linked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Construction Linked</label>
    <type>Checkbox</type>
</CustomField>