force-app/main/default/objects/Payment_Milestone__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Payment Milestones</relationshipLabel>
    <relationshipName>Payment_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>