force-app/main/default/objects/Payment_Milestone__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Payment Milestones</relationshipLabel>
    <relationshipName>Payment_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>